--- a/package.json
+++ b/package.json
@@ -13,6 +13,11 @@
     "react-dom": "^19.0.0",
     "next": "15.1.7"
   },
+  "packageManager": "npm@10.8.1",
+  "overrides": {
+    "react":"$react",
+    "reactDom":"$reactDom"
+  },
   "devDependencies": {
     "typescript": "^5",
     "@types/node": "^20",
