--- a/FE/package.json
+++ b/FE/package.json
@@ -27,6 +27,7 @@
     "framer-motion": "^12.4.2",
     "google-auth-library": "^9.15.1",
     "googleapis": "^146.0.0",
+    "lodash": "^4.17.21",
     "lucide-react": "^0.475.0",
     "next": "15.1.7",
     "react": "^19.0.0",
