--- a/FE/package.json
+++ b/FE/package.json
@@ -12,6 +12,9 @@
     "db:studio": "drizzle-kit studio"
   },
   "dependencies": {
+    "@ai-sdk/google": "^1.2.2",
+    "@ai-sdk/openai": "^1.2.6",
+    "@google/generative-ai": "^0.24.0",
     "@heroui/navbar": "^2.2.9",
     "@heroui/react": "^2.6.14",
     "@heroui/system": "^2.4.7",
@@ -21,15 +24,18 @@
     "@radix-ui/react-separator": "^1.1.2",
     "@radix-ui/react-slot": "^1.1.2",
     "@radix-ui/react-tooltip": "^1.1.8",
+    "ai": "^4.2.2",
     "aws-sdk": "^2.1692.0",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "dotenv": "^16.4.7",
     "framer-motion": "^12.4.2",
     "google-auth-library": "^9.15.1",
     "googleapis": "^146.0.0",
     "lodash": "^4.17.21",
     "lucide-react": "^0.475.0",
     "next": "15.1.7",
+    "pgvector": "^0.2.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-icons": "^5.5.0",
@@ -54,7 +60,7 @@
     "drizzle-orm": "^0.39.3",
     "eslint": "^9",
     "eslint-config-next": "15.1.7",
-    "pg": "^8.13.3",
+    "pg": "^8.14.1",
     "postcss": "^8",
     "postgres": "^3.4.5",
     "tailwindcss": "^3.4.1",
