--- a/FE/package.json
+++ b/FE/package.json
@@ -19,26 +19,35 @@
     "@heroui/react": "^2.6.14",
     "@heroui/system": "^2.4.7",
     "@heroui/theme": "^2.4.6",
+    "@langchain/community": "^0.3.37",
+    "@langchain/core": "^0.3.43",
+    "@langchain/google-genai": "^0.2.0",
     "@neondatabase/serverless": "^0.10.4",
     "@radix-ui/react-dialog": "^1.1.6",
     "@radix-ui/react-separator": "^1.1.2",
     "@radix-ui/react-slot": "^1.1.2",
     "@radix-ui/react-tooltip": "^1.1.8",
+    "@reduxjs/toolkit": "^2.6.1",
     "ai": "^4.2.2",
     "aws-sdk": "^2.1692.0",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "dotenv": "^16.4.7",
     "framer-motion": "^12.4.2",
+    "fs": "^0.0.1-security",
     "google-auth-library": "^9.15.1",
     "googleapis": "^146.0.0",
+    "langchain": "^0.3.19",
     "lodash": "^4.17.21",
     "lucide-react": "^0.475.0",
+    "natural": "^8.0.1",
     "next": "15.1.7",
     "pgvector": "^0.2.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-icons": "^5.5.0",
+    "react-redux": "^9.2.0",
+    "stopwords-iso": "^1.1.0",
     "tailwind-merge": "^3.0.1",
     "tailwindcss-animate": "^1.0.7",
     "youtube-transcript": "^1.2.1",
