Added Summary generation route

--- a/FE/package.json
+++ b/FE/package.json
@@ -20,8 +20,9 @@
     "@heroui/system": "^2.4.7",
     "@heroui/theme": "^2.4.6",
     "@langchain/community": "^0.3.37",
-    "@langchain/core": "^0.3.43",
+    "@langchain/core": "^0.3.53",
     "@langchain/google-genai": "^0.2.0",
+    "@langchain/groq": "^0.2.2",
     "@neondatabase/serverless": "^0.10.4",
     "@radix-ui/react-dialog": "^1.1.6",
     "@radix-ui/react-separator": "^1.1.2",
@@ -37,7 +38,7 @@
     "fs": "^0.0.1-security",
     "google-auth-library": "^9.15.1",
     "googleapis": "^146.0.0",
-    "langchain": "^0.3.19",
+    "langchain": "^0.3.24",
     "lodash": "^4.17.21",
     "lucide-react": "^0.475.0",
     "natural": "^8.0.1",
