--- a/FE/package.json
+++ b/FE/package.json
@@ -26,18 +26,18 @@
     "@neondatabase/serverless": "^0.10.4",
     "@radix-ui/react-dialog": "^1.1.6",
     "@radix-ui/react-separator": "^1.1.2",
-    "@radix-ui/react-slot": "^1.1.2",
+    "@radix-ui/react-slot": "^1.2.3",
     "@radix-ui/react-tooltip": "^1.1.8",
     "@reduxjs/toolkit": "^2.6.1",
-    "ai": "^4.2.2",
+    "ai": "^4.3.13",
     "aws-sdk": "^2.1692.0",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
-    "dotenv": "^16.4.7",
     "framer-motion": "^12.4.2",
     "fs": "^0.0.1-security",
     "google-auth-library": "^9.15.1",
     "googleapis": "^146.0.0",
+    "ioredis": "^5.6.1",
     "langchain": "^0.3.24",
     "lodash": "^4.17.21",
     "lucide-react": "^0.475.0",
@@ -61,11 +61,11 @@
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
-    "@types/node": "^20",
+    "@types/node": "^20.17.50",
     "@types/pg": "^8.11.11",
     "@types/react": "^19",
     "@types/react-dom": "^19",
-    "dotenv": "^16.4.7",
+    "dotenv": "^16.5.0",
     "drizzle-kit": "^0.30.5",
     "drizzle-orm": "^0.39.3",
     "eslint": "^9",
