--- a/FE/docker.compose.yml
+++ b/FE/docker.compose.yml
@@ -17,5 +17,16 @@ services:
       timeout: 5s
       retries: 5
 
+  redis:
+    image: redis:7.2
+    container_name: redis-token-store
+    restart: unless-stopped
+    ports:
+      - "6379:6379"
+    volumes:
+      - redisdata:/data
+    command: ["redis-server", "--appendonly", "yes"]
+
 volumes:
-  pgdata: 
+  pgdata:
+  redisdata: 
