--- a/FE/package.json
+++ b/FE/package.json
@@ -14,6 +14,7 @@
   "dependencies": {
     "@ai-sdk/google": "^1.2.2",
     "@ai-sdk/openai": "^1.2.6",
+    "@clerk/nextjs": "^6.32.0",
     "@google/generative-ai": "^0.24.0",
     "@heroui/navbar": "^2.2.9",
     "@heroui/react": "^2.6.14",
@@ -41,7 +42,7 @@
     "lodash": "^4.17.21",
     "lucide-react": "^0.475.0",
     "natural": "^8.0.1",
-    "next": "15.1.7",
+    "next": "^15.5.3",
     "pgvector": "^0.2.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
