--- a/FE/package.json
+++ b/FE/package.json
@@ -52,6 +52,7 @@
     "tailwind-merge": "^3.0.1",
     "tailwindcss-animate": "^1.0.7",
     "youtube-transcript": "^1.2.1",
+    "ytdlp-nodejs": "^2.3.4",
     "zustand": "^5.0.3"
   },
   "packageManager": "npm@10.8.1",
@@ -74,6 +75,7 @@
     "postcss": "^8",
     "postgres": "^3.4.5",
     "tailwindcss": "^3.4.1",
+    "tsx": "^4.20.6",
     "typescript": "^5"
   }
 }
