--- a/extension/manifest.json
+++ b/extension/manifest.json
@@ -1,8 +1,8 @@
 {
   "manifest_version": 3,
   "name": "LinnkedOut",
-  "version": "1.0",
-  "description": "Filter unproductive YouTube recommendations using AI",
+  "version": "2.0",
+  "description": "Control your YouTube experience with Focus, Personalized, and Chill modes",
   "icons": {
     "16": "icon.svg",
     "48": "icon.svg",
@@ -17,21 +17,20 @@
     "service_worker": "background.js",
     "type": "module"
   },
-  "permissions": ["storage", "activeTab", "offscreen"],
+  "permissions": ["storage", "activeTab"],
   "host_permissions": [
     "https://www.youtube.com/*",
-    "https://huggingface.co/*",
-    "https://cdn-lfs.huggingface.co/*",
-    "https://raw.githubusercontent.com/*"
+    "http://localhost:3001/*",
+    "https://*.vercel.app/*",
+    "https://generativelanguage.googleapis.com/*",
+    "https://api.anthropic.com/*",
+    "https://api.openai.com/*"
   ],
   "content_scripts": [
     {
       "matches": ["https://www.youtube.com/*"],
       "js": ["content.js"],
-      "run_at": "document_idle"
+      "run_at": "document_start"
     }
-  ],
-  "content_security_policy": {
-    "extension_pages": "script-src 'self' 'wasm-unsafe-eval'; object-src 'self'"
-  }
+  ]
 }
