--- a/extension/package.json
+++ b/extension/package.json
@@ -1,19 +1,20 @@
 {
-  "name": "extension",
-  "version": "1.0.0",
-  "description": "",
+  "name": "linnkedout",
+  "version": "2.0.0",
+  "description": "Control your YouTube experience with Focus, Personalized, and Chill modes",
   "main": "index.js",
   "scripts": {
     "dev": "vite",
     "build": "vite build && cp manifest.json dist/ && cp public/icon.svg dist/",
     "preview": "vite preview"
   },
-  "keywords": [],
+  "keywords": [
+    "youtube",
+    "productivity",
+    "extension"
+  ],
   "author": "",
   "license": "ISC",
-  "dependencies": {
-    "@mlc-ai/web-llm": "^0.2.80"
-  },
   "devDependencies": {
     "@types/chrome": "^0.1.32",
     "@types/node": "^25.0.3",
