--- a/extension/package.json
+++ b/extension/package.json
@@ -20,5 +20,12 @@
     "@types/node": "^25.0.3",
     "typescript": "^5.9.3",
     "vite": "^7.3.0"
+  },
+  "dependencies": {
+    "@ai-sdk/anthropic": "^3.0.1",
+    "@ai-sdk/google": "^3.0.1",
+    "@ai-sdk/openai": "^3.0.1",
+    "ai": "^6.0.3",
+    "zod": "^4.2.1"
   }
 }
